# ChangeLog for sci-chemistry/openbabel-perl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Feb 2014; Reinis Danne <rei4dan@gmail.com> openbabel-perl-9999.ebuild:
  Fix move to git-r3.

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> openbabel-perl-9999.ebuild:
  Switch from git-2 to git-r3

*openbabel-perl-9999 (26 Sep 2013)

  26 Sep 2013; Reinis Danne <rei4dan@gmail.com> +openbabel-perl-9999.ebuild,
  +metadata.xml:
  Add live ebuild.
