@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Sep 2014; Christoph Junghans <ottxor@gentoo.org>
+  openbabel-perl-9999.ebuild:
+  quote vars
+
   14 Feb 2014; Reinis Danne <rei4dan@gmail.com> openbabel-perl-9999.ebuild:
   Fix move to git-r3.
 
@@ -13,4 +17,3 @@
   26 Sep 2013; Reinis Danne <rei4dan@gmail.com> +openbabel-perl-9999.ebuild,
   +metadata.xml:
   Add live ebuild.
-
